Add complete profile public API
